Struktura HTML i stylowanie CSS opening section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <title>Best Shop</title>
 </head>
 <body>
-    
+    <header>
+        <div class="top-menu">
+            <div class="container">
+                <a href="#" class="logo">BestShop</a>
+                <nav>
+                    <ul>
+                        <li><a href="#why-us" class="nav-link">why us</a></li>
+                        <li><a href="#benefits" class="nav-link">benefits</a></li>
+                        <li><a href="#prices" class="nav-link">prices</a></li>
+                        <li><a href="#contact" class="nav-link">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="opening-section">
+            <h1>sell more!</h1>
+            <p>Open shop on our platform and increase your sales</p>
+            <button><a href="#">open your shop</a></button>  
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
