--- a/index.html
+++ b/index.html
@@ -23,13 +23,34 @@
                 </nav>
             </div>
         </div>
-        <div class="opening-section">
+        <div class="opening-section container">
             <h1>sell more!</h1>
             <p>Open shop on our platform and increase your sales</p>
             <button><a href="#">open your shop</a></button>  
         </div>
     </header>
-    <main></main>
+    <main class="container">
+        <section class="statistics">
+            <h2 class="statistics-small-header">The most popular sales platform in country</h2>
+            <div class="statistics-info">
+                <div class="number entries">
+                    <div class="icon1"></div>
+                    <p class="statistics-text">daily entries</p>
+                </div>
+                <div class="number products">
+                    <div class="icon2"></div>
+                    <p class="statistics-text">seen products every day</p>
+                </div>
+                <div class="number posts">
+                    <div class="icon3"></div>
+                    <p class="statistics-text">added posts daily</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="pricing"></section>
+        <section class="contact"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
