stylowanie CSS sekcji statystyki

--- a/index.html
+++ b/index.html
@@ -29,24 +29,44 @@
             <button><a href="#">open your shop</a></button>  
         </div>
     </header>
-    <main class="container">
+    <main>
         <section class="statistics">
-            <h2 class="statistics-small-header">The most popular sales platform in country</h2>
-            <div class="statistics-info">
-                <div class="number entries">
-                    <div class="icon1"></div>
-                    <p class="statistics-text">daily entries</p>
-                </div>
-                <div class="number products">
-                    <div class="icon2"></div>
-                    <p class="statistics-text">seen products every day</p>
-                </div>
-                <div class="number posts">
-                    <div class="icon3"></div>
-                    <p class="statistics-text">added posts daily</p>
+            <div class="container">
+                <h2 class="statistics-small-header">The most popular sales platform in country</h2>
+                <div class="statistics-info">
+                    <div class="box">
+                        <div class="icon circle1">
+                            <img src="assets/Person.svg" alt="person" class="statistics-img">
+                        </div>
+                        <p class="statistics-number">100000+</p>
+                        <p class="statistics-text">daily entries</p>
+                    </div>
+                    <div class="box">
+                        <div class="icon circle2">
+                            <img src="assets/Eye.svg" alt="eye" class="statistics-img">
+                        </div>
+                        <p class="statistics-number">200000+</p>
+                        <p class="statistics-text">seen products every day</p>
+                    </div>
+                    <div class="box">
+                        <div class="icon circle3">
+                            <img src="assets/Catalog.svg" alt="catalog" class="statistics-img">
+                        </div>
+                        <p class="statistics-number">10000+</p>
+                        <p class="statistics-text">added posts daily</p>
+                    </div>
                 </div>
             </div>
-
+        </section>
+        <section class="benefits">
+            <div class="container-benefits">
+                <div class="benefit benefit1"></div>
+                <div class="benefit benefit2"></div>
+                <div class="benefit benefit3">
+                    <div class="benefit3-text"></div>
+                    <div class="benefit3-pic"></div>
+                </div>
+            </div>
         </section>
         <section class="pricing"></section>
         <section class="contact"></section>
