struktura sekcji Benefits

--- a/index.html
+++ b/index.html
@@ -59,16 +59,80 @@
             </div>
         </section>
         <section class="benefits">
-            <div class="container-benefits">
-                <div class="benefit benefit1"></div>
-                <div class="benefit benefit2"></div>
-                <div class="benefit benefit3">
-                    <div class="benefit3-text"></div>
-                    <div class="benefit3-pic"></div>
+            <div class="container">
+                <div class="benefit benefit1">
+                    <div class="benefit-info">
+                        <h2>Be always first</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div class="benefit-pic pic1">
+                        <img src="assets/Macbook.png" alt="macbook" class="benefit-img">
+                    </div>
+                </div>
+                <div class="benefit benefit2">
+                    <div class="benefit-info">
+                        <h2>Your shop is where you are!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div class="benefit-pic pic2">
+                        <img src="assets/iPhone.png" alt="iphone" class="benefit-img">
+                    </div>
+                </div>
+                <div class="benefit3-and-4">
+                    <div class="benefit benefit3">
+                        <div class="benefit-info">
+                            <h2>Increase recognition your brand!</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        </div>
+                    </div>    
+                    <div class="benefit-pic3">
+                        <img src="assets/Trumpet.png" alt="trumpet" class="benefit-img">
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="pricing"></section>
+        <section class="pricing">
+            <div class="container">                
+                <h2>Pricing</h2>
+                <div class="pricing-boxes">
+                    <div class="pricing-single prricing-basic">
+                        <div class="pricing-type">Basic</div>
+                        <div class="pricing-cost">$0</div>
+                        <ul class="pricing-details">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="pricing-single pricing-proffesional">
+                        <div class="pricing-type">Professional</div>
+                        <div class="pricing-cost">$25</div>
+                        <div class="offer-time">Limited offer</div>
+                        <ul class="pricing-details">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="pricing-single pricing-premium">
+                        <div class="pricing-type">Premium</div>
+                        <div class="pricing-cost">$60</div>
+                        <div class="offer-time">Limited offer</div>
+                        <ul class="pricing-details">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="contact"></section>
     </main>
     <footer></footer>
