style sekcja Benefits

--- a/index.html
+++ b/index.html
@@ -93,42 +93,45 @@
         </section>
         <section class="pricing">
             <div class="container">                
-                <h2>Pricing</h2>
+                <h2 class="pricing-header">Pricing</h2>
                 <div class="pricing-boxes">
-                    <div class="pricing-single prricing-basic">
+                    <div class="pricing-single pricing-basic">
                         <div class="pricing-type">Basic</div>
                         <div class="pricing-cost">$0</div>
                         <ul class="pricing-details">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li class="checked">100 MB HDD</li>
+                            <li class="checked">1 Subdomain</li>
+                            <li class="checked">2 E-mails</li>
+                            <li class="not-checked">Two years licene</li>
+                            <li class="not-checked">Full support</li>
                         </ul>
+                        <a href="#" class="btn">Begin</a>
                     </div>
-                    <div class="pricing-single pricing-proffesional">
+                    <div class="pricing-single pricing-professional">
                         <div class="pricing-type">Professional</div>
                         <div class="pricing-cost">$25</div>
                         <div class="offer-time">Limited offer</div>
                         <ul class="pricing-details">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li class="checked">500 MB HDD</li>
+                            <li class="checked">2 Subdomains</li>
+                            <li class="checked">5 E-mails</li>
+                            <li class="checked">One year licene</li>
+                            <li class="not-checked">Full support</li>
                         </ul>
+                        <a href="#" class="btn">Begin</a>
                     </div>
                     <div class="pricing-single pricing-premium">
                         <div class="pricing-type">Premium</div>
                         <div class="pricing-cost">$60</div>
                         <div class="offer-time">Limited offer</div>
                         <ul class="pricing-details">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li class="checked">2 GB HDD</li>
+                            <li class="checked">5 Subdomains</li>
+                            <li class="checked">20 E-mails</li>
+                            <li class="checked">Two years licene</li>
+                            <li class="checked">Full support</li>
                         </ul>
+                        <a href="#" class="btn">Begin</a>
                     </div>
                 </div>
             </div>
