style sekcja Pricing HTML

--- a/index.html
+++ b/index.html
@@ -136,7 +136,34 @@
                 </div>
             </div>
         </section>
-        <section class="contact"></section>
+        <section class="contact">
+            <div class="container">
+                <div class="contact-info">
+                    <h1>Any questions?</h2>
+                    <p>Leave your email address or call us!</p>
+                    <div class="contact-tools">
+                        <div class="e-mail">info@bestshop.xyz</div>
+                        <div class="telephone">123 456 789</div>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form class="form">
+                        <label for="name"></label>
+                        <input type="text" name="name" placeholder="name">
+                    </form>
+                    <form class="form">
+                        <label for="email"></label>
+                        <input type="email" placeholder="email">
+                    </form>
+                    <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                    </label>
+                    <button type="submit" name="log">Send</button>
+                </div>
+            </div>            
+        </section>
     </main>
     <footer></footer>
 </body>
