sekcja footer gotowa'

--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
             </div>            
         </section>
     </main>
-    <footer></footer>
+    <footer class="container-footer">
+        <div class="container">
+            <div class="footer-info">
+                <div class="logo-footer">BestShop</div>
+                <div class="copyrights"><span>&copy;</span> 2019 BestShop LTD, All Rights Reserved</div>
+            </div>    
+            <div class="social-media">
+                <a href="https://twitter.com/explore">
+                    <img src="assets/Twitter.svg" alt="logo-twitter">
+                </a>
+                <a href="https://www.facebook.com/">
+                    <img src="assets/Facebook.svg" alt="logo-facebook">
+                </a> 
+            </div>
+        </div>                
+    </footer>
 </body>
 </html>
