zmiany w pozycjonowaniu elementów

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <h1>sell more!</h1>
             <p>Open shop on our platform and increase your sales</p>
             <button><a href="#">open your shop</a></button>  
+            <img src="assets/Background.png" alt="laptop">
         </div>
     </header>
     <main>
