poprawki do sekcji Benefts

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="benefits">
-            <div class="container">
+            <div class="container benefits-container">
                 <div class="benefit benefit1">
                     <div class="benefit-info">
                         <h2>Be always first</h2>
@@ -79,8 +79,8 @@
                         <img src="assets/iPhone.png" alt="iphone" class="benefit-img">
                     </div>
                 </div>
-                <div class="benefit3-and-4">
-                    <div class="benefit benefit3">
+                <div class="benefit3">
+                    <div class="benefit benefit3a">
                         <div class="benefit-info">
                             <h2>Increase recognition your brand!</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
