zmiany sekcji opening

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <a href="#" class="logo">BestShop</a>
                 <nav>
-                    <ul>
+                    <ul class="top-menu-items">
                         <li><a href="#why-us" class="nav-link">why us</a></li>
                         <li><a href="#benefits" class="nav-link">benefits</a></li>
                         <li><a href="#prices" class="nav-link">prices</a></li>
@@ -23,16 +23,18 @@
                 </nav>
             </div>
         </div>
-        <div class="opening-section container">
-            <h1>sell more!</h1>
-            <p>Open shop on our platform and increase your sales</p>
-            <button><a href="#">open your shop</a></button>  
-            <img src="assets/Background.png" alt="laptop">
-        </div>
     </header>
     <main>
+        <section class="opening">
+            <div class="container opening-container">
+                <h1>sell more!</h1>
+                <p>Open shop on our platform and increase your sales</p>
+                <a href="#"><button class="big-btn">open your shop</button></a>  
+                <img src="assets/Background.png" alt="laptop">
+            </div>
+        </section>
         <section class="statistics">
-            <div class="container">
+            <div class="container statistics-container">
                 <h2 class="statistics-small-header">The most popular sales platform in country</h2>
                 <div class="statistics-info">
                     <div class="box">
@@ -93,7 +95,7 @@
             </div>
         </section>
         <section class="pricing">
-            <div class="container">                
+            <div class="container pricing-container">                
                 <h2 class="pricing-header">Pricing</h2>
                 <div class="pricing-boxes">
                     <div class="pricing-single pricing-basic">
@@ -106,7 +108,7 @@
                             <li class="not-checked">Two years licene</li>
                             <li class="not-checked">Full support</li>
                         </ul>
-                        <a href="#" class="btn">Begin</a>
+                        <a href="#" class="small-btn">Begin</a>
                     </div>
                     <div class="pricing-single pricing-professional">
                         <div class="pricing-type">Professional</div>
@@ -119,7 +121,7 @@
                             <li class="checked">One year licene</li>
                             <li class="not-checked">Full support</li>
                         </ul>
-                        <a href="#" class="btn">Begin</a>
+                        <a href="#" class="small-btn">Begin</a>
                     </div>
                     <div class="pricing-single pricing-premium">
                         <div class="pricing-type">Premium</div>
@@ -132,7 +134,7 @@
                             <li class="checked">Two years licene</li>
                             <li class="checked">Full support</li>
                         </ul>
-                        <a href="#" class="btn">Begin</a>
+                        <a href="#" class="small-btn">Begin</a>
                     </div>
                 </div>
             </div>
