poprawa stylowania formularza

--- a/index.html
+++ b/index.html
@@ -151,19 +151,23 @@
                 </div>
                 <div class="contact-form">
                     <form class="form">
-                        <label for="name"></label>
-                        <input type="text" name="name" placeholder="name">
-                    </form>
-                    <form class="form">
-                        <label for="email"></label>
-                        <input type="email" placeholder="email">
-                    </form>
-                    <label class="checkbox">
-                    <input type="checkbox">
-                    <span></span>
-                    <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
-                    </label>
-                    <button type="submit" name="log">Send</button>
+                        <div class="user-info">
+                            <label class="user-name">name</label>
+                            <input type="text" name="name">
+                        </div>
+                        <div class="user-info">
+                            <label class="user-email">email</label>
+                            <input type="email">
+                        </div>
+                        <div class="user-agree">
+                            <label class="checkbox">
+                            <input type="checkbox">
+                            <span></span>
+                            <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                            </label>
+                        </div>
+                       <button type="submit" name="log">Send</button>
+                    </form>    
                 </div>
             </div>            
         </section>
